# Risuai-Luapack

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  luapack.cmd  luapack.ps1  pyproject.toml  requirements.txt  setup.ps1
.github/workflows/: ci.yml
docs/: README.md  index.json  lua-api.md  lua-guide.md  lua-risu-feature-notes.md
docs/api/: LLM.md  LLMMain.md  addChat.md  alertConfirm.md  alertError.md  alertInput.md  alertNormal.md  alertSelect.md  axLLM.md  axLLMMain.md  cbs.md  cutChat.md  generateImage.md  getAuthorsNote.md  getBackgroundEmbedding.md  getCharacterFirstMessage.md  getCharacterImage.md  getCharacterImageMain.md  getCharacterLastMessage.md  getChat.md  getChatLength.md  getChatMain.md  getChatVar.md  getDescription.md  getFullChat.md  getFullChatMain.md  getGlobalVar.md  getLoreBooks.md  getLoreBooksMain.md  getName.md  getPersonaDescription.md  getPersonaImage.md  getPersonaImageMain.md  getPersonaName.md  getState.md  getTokens.md  getUserLastMessage.md  hash.md  insertChat.md  listenEdit.md  (+23 more)
docs/element/: access-key.md  asset-tokens.md  background-embedding.md  chat-message.md  chat-variables.md  display-html.md  global-variables.md  inlay-tokens.md  lorebook-entry.md  modules.md  promise-async.md  prompt-toggles.md  regex-script.md
docs/hooks/: custom-modes.md  (+8 more)
luapack/: __init__.py  __main__.py  bundler.py  cbs.py  docgen.py  lint.py  testing.py  vendored.py
risu-docs/: STRUCTURE.md
scripts/: smoke.py
tests/: conftest.py  test_api_coverage.py  test_bundler.py  test_docgen.py  test_emulator.py  test_lint.py
(+190 files in other folders)
